#78612 Extended case report, show template name instead of form, group by template, gray template if inactive, option for using report generator - extended case in admin, script for adding the report to customers (default show is false)

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Report/ReportViewer/_Overview.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Report/ReportViewer/_Overview.cshtml
@@ -398,7 +398,7 @@
                             @Translation.GetCoreTextTranslation("Formulär")
                         </td>
                         <td>
-                                @Html.DropDownListFor(m => m.ReportGeneratorExtendedCaseFormId, Model.ReportGeneratorExtendedCaseForms.Select(o => new SelectListItem() { Text = o.Name, Value = o.ID.ToString() }).ToList().Use(o => { o.Insert(0, new SelectListItem() { Text = "", Value = "" }); return o; }),
+                                @Html.DropDownListFor(m => m.ReportGeneratorExtendedCaseFormId, Model.ReportGeneratorExtendedCaseForms.Select(o => new SelectListItem() { Text = o.Name, Value = o.Id.ToString(), Disabled = o.HasInactiveCaseSolutions }).ToList().Use(o => { o.Insert(0, new SelectListItem() { Text = "", Value = "" }); return o; }),
                                 new
                                 {
                                     id = "lstExtendedCaseForms",
