#79492 - moved statistics method to separate controller

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Home/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Home/Index.cshtml
@@ -241,7 +241,7 @@
 {
     <script type="text/javascript">
         dhHelpdesk.statistics.init({
-            dataUrl: '@Url.Action("GetStatistics", "Home")'
+            dataUrl: '@Url.Action("GetStatistics", "Statistics")'
         });
         var statXhr = dhHelpdesk.statistics.loadStatistics();
 
