--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Edit.cshtml
@@ -115,6 +115,23 @@
 {
     @Scripts.Render(BundleConfig.ScriptNames.InventoryWorkstation)
     <script type="text/javascript">
+
+        window.parameters = (window.parameters == null ? {} : window.parameters);
+        window.parameters.fileUploadWhiteList = [];
+
+        @if (Model.FileUploadWhiteList != null)
+        {
+            foreach(var extension in Model.FileUploadWhiteList)
+            {
+                @:window.parameters.fileUploadWhiteList.push('@extension');
+            }
+        }
+        else
+        {
+            @:window.parameters.fileUploadWhiteList = null;
+        }
+
+
         $(function(jQuery) {
             window.workstationEdit = new WorkstationEdit($);
             window.workstationEdit.init({
