--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/New.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/New.cshtml
@@ -48,6 +48,24 @@
 }
 
 @section Scripts{
+
+    <script type="text/javascript">
+        window.parameters = (window.parameters == null ? {} : window.parameters);
+        window.parameters.fileUploadWhiteList = [];
+
+        @if (Model.FileUploadWhiteList != null)
+        {
+            foreach(var extension in Model.FileUploadWhiteList)
+            {
+                @:window.parameters.fileUploadWhiteList.push('@extension');
+            }
+        }
+        else
+        {
+            @:window.parameters.fileUploadWhiteList = null;
+        }
+    </script>
+
     @if (Model.ContractFieldsViewModel.ContractFieldsModel.Document.Show)
     {
         @Html.Partial("_InventoryFiles")
