--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Changes/New.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Changes/New.cshtml
@@ -18,8 +18,22 @@
             implementationSubtopic: '@Subtopic.Implementation',
             evaluationSubtopic: '@Subtopic.Evaluation',
             registrationRejectValue: '@StepStatus.Rejected',
-            analyzeRejectValue: '@StepStatus.Rejected'
+            analyzeRejectValue: '@StepStatus.Rejected',
+            fileUploadWhiteList: []
         };
+
+        @if (Model.FileUploadWhiteList != null)
+        {
+
+            foreach (var extension in Model.FileUploadWhiteList)
+            {
+            @:parameters.fileUploadWhiteList.push('@extension');
+            }
+        }
+        else
+        {
+            @:parameters.fileUploadWhiteList = null;
+        }
 
         applyChangeBehavior(parameters);
     });
