--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Projects/EditProject.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Projects/EditProject.cshtml
@@ -82,7 +82,20 @@
 <input type="hidden" name="activeTab" id="activeTab" value="@SessionFacade.ActiveTab" />
 
 <script type="text/javascript">
+    window.parameters = (window.parameters == null ? {} : window.parameters);
+    window.parameters.fileUploadWhiteList = [];
 
+        @if (Model.FileUploadWhiteList != null)
+        {
+            foreach(var extension in Model.FileUploadWhiteList)
+            {
+                @:window.parameters.fileUploadWhiteList.push('@extension');
+            }
+        }
+        else
+        {
+            @:window.parameters.fileUploadWhiteList = null;
+        }
     $(document).ready(function () {
         $("#subbut").click(function () {
 
