--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Projects/NewProject.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Projects/NewProject.cshtml
@@ -39,6 +39,20 @@
 }
 
 <script>
+    window.parameters = (window.parameters == null ? {} : window.parameters);
+    window.parameters.fileUploadWhiteList = [];
+
+        @if (Model.FileUploadWhiteList != null)
+        {
+            foreach(var extension in Model.FileUploadWhiteList)
+            {
+                @:window.parameters.fileUploadWhiteList.push('@extension');
+            }
+        }
+        else
+        {
+            @:window.parameters.fileUploadWhiteList = null;
+        }
 
     $.validator.setDefaults({
         ignore: ""
