--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Orders/New.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Orders/New.cshtml
@@ -56,5 +56,20 @@
         $(function () {
             window.scrollTo(0, 0);
         });
+
+        window.parameters = (window.parameters == null ? {} : window.parameters);
+        window.parameters.fileUploadWhiteList = [];
+
+        @if (Model.FileUploadWhiteList != null)
+        {
+            foreach(var extension in Model.FileUploadWhiteList)
+            {
+                @:window.parameters.fileUploadWhiteList.push('@extension');
+            }
+        }
+        else
+        {
+            @:window.parameters.fileUploadWhiteList = null;
+        }
     </script>
 }
