--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Document/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Document/_Input.cshtml
@@ -1,7 +1,24 @@
 ﻿@using DH.Helpdesk.Web.Infrastructure
 @model DH.Helpdesk.Web.Models.DocumentInputViewModel
 
-<div class="content">
+<script type="text/javascript">
+    window.parameters = (window.parameters == null ? {} : window.parameters);
+    window.parameters.fileUploadWhiteList = [];
+
+        @if (Model.FileUploadWhiteList != null)
+        {
+            foreach(var extension in Model.FileUploadWhiteList)
+            {
+                @:window.parameters.fileUploadWhiteList.push('@extension');
+            }
+        }
+        else
+        {
+            @:window.parameters.fileUploadWhiteList = null;
+        }
+</script>
+
+<div class="content">dasdsadasdasdas
     @if (TempData["Error"] != null)
     {
         <div class="alert alert-error">@Translation.Get("Dokument", Enums.TranslationSource.TextTranslation)
@@ -163,6 +180,33 @@
 </div>
 <script type="text/javascript">
 
+    $(function () {
+        var fileUploadWhiteList = window.parameters.fileUploadWhiteList;
+
+        var isFileInWhiteList = function (filename, whiteList) {
+            if (filename.indexOf('.') !== -1) {
+                var extension = filename.split('.').reverse()[0];
+                if (whiteList.indexOf(extension) >= 0)
+                    return true;
+            }
+            else {
+                if (whiteList.indexOf('') >= 0)
+                    return true;
+            }
+            return false;
+        };
+
+        $('input[name=fileUploadedName]').change(function (e) {
+            var fileName = e.target.files[0].name;
+
+            if (!isFileInWhiteList(fileName, fileUploadWhiteList)) {
+                $('input[name=fileUploadedName]').val('');
+                alert('File does not have a valid file extension'); // TODO: translate
+                return false;
+            }
+
+        });
+    });
    
         var validator = $("#target").validate({
             rules: {
@@ -196,6 +240,7 @@
     function submitForm() {
         $("#UsSelected option").attr("selected", "selected");
         $("#WGsSelected option").attr("selected", "selected");
+
         $("#target").submit();
     }
 
