--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Faq/NewFaq.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Faq/NewFaq.cshtml
@@ -13,6 +13,22 @@
     $(document).ready(function () {
         FAQInitForm();
     });
+
+    window.parameters = (window.parameters == null ? {} : window.parameters);
+    window.parameters.fileUploadWhiteList = [];
+
+    @if (Model.FileUploadWhiteList != null)
+    {
+        foreach(var extension in Model.FileUploadWhiteList)
+        {
+            @:window.parameters.fileUploadWhiteList.push('@extension');
+        }
+    }
+    else
+    {
+        @:window.parameters.fileUploadWhiteList = null;
+    }
+
 </script>
 
 @Html.Partial("_Plupload") 
