--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Orders/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Orders/Edit.cshtml
@@ -58,3 +58,25 @@
         @Html.EditorFor(m => m)
     }
 }
+
+@section Scripts
+{
+    <script type="text/javascript">
+
+        window.parameters = (window.parameters == null ? {} : window.parameters);
+        window.parameters.fileUploadWhiteList = [];
+
+        @if (Model.FileUploadWhiteList != null)
+        {
+            foreach(var extension in Model.FileUploadWhiteList)
+            {
+                @:window.parameters.fileUploadWhiteList.push('@extension');
+            }
+        }
+        else
+        {
+            @:window.parameters.fileUploadWhiteList = null;
+        }
+
+    </script>
+    }
